--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "cros": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "body-parser": "^1.20.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
